Updated the tests, do not delete the downloaded assets to make the tests run faster.