@@ -12,6 +12,7 @@ import com.doqmind.thumbnail.model.Thumbnail;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.IOUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -20,6 +21,7 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
 
 /**
@@ -28,6 +30,7 @@ import java.util.function.Consumer;
  * @see ThumbnailService
  * @since 09-11-2023
  */
+@SuppressWarnings("ConstantConditions")
 @Slf4j
 @Service
 public class ThumbnailServiceImpl implements ThumbnailService {
@@ -40,6 +43,10 @@ public class ThumbnailServiceImpl implements ThumbnailService {
     private String connectionString;
     @Value("${thumbnail.container}")
     private String container;
+
+
+    private BlobServiceClient blobServiceClient;
+    private BlobContainerClient blobContainerClient;
 
     @SuppressWarnings({"FieldCanBeLocal", "unused"})
     private final ThumbnailRepository thumbnailRepository;
@@ -65,7 +72,7 @@ public class ThumbnailServiceImpl implements ThumbnailService {
         }
         if (thumbnailBlobClient.exists()) {
             InputStream inputStream = thumbnailBlobClient.openInputStream();
-            return Thumbnail.builder().name(thumbnailName).blob(inputStream.readAllBytes()).build();
+            return Thumbnail.builder().name(thumbnailName).blob(IOUtils.toByteArray(inputStream)).build();
         }
         return Thumbnail.builder().build();
     }
@@ -78,8 +85,8 @@ public class ThumbnailServiceImpl implements ThumbnailService {
     }
 
     @Override
-    @SuppressWarnings({"Convert2Lambda", "Convert2Diamond"})
-    public void crawlBlob() {
+    @SuppressWarnings({"Convert2Lambda"})
+    public void generateThumbnails() {
         log.info("Crawling blob: " + container);
         final BlobContainerClient blobContainerClient = getBlobContainerClient();
         PagedIterable<BlobItem> blobItems = blobContainerClient.listBlobs();
@@ -95,7 +102,7 @@ public class ThumbnailServiceImpl implements ThumbnailService {
 
     private void generateThumbnail(final BlobContainerClient blobContainerClient, final BlobClient blobClient) throws IOException, InterruptedException {
         log.info("Blob file: " + blobClient.getBlobName());
-        if (!blobClient.getBlobName().endsWith("jpg")) {
+        if (!blobClient.getBlobName().endsWith(THUMBNAIL_SUFFIX)) {
             File downloadedFile = new File(blobClient.getBlobName());
             String thumbnailName = blobClient.getBlobName() + THUMBNAIL_SUFFIX;
 
@@ -106,7 +113,8 @@ public class ThumbnailServiceImpl implements ThumbnailService {
             } else {
                 log.info("Thumbnail already generated: " + thumbnailName);
             }
-            boolean deleted = FileUtils.deleteQuietly(downloadedFile);
+            // TODO: The delete must be uncommented for production, this is just for testing
+            boolean deleted = false; // FileUtils.deleteQuietly(downloadedFile);
             if (!deleted) {
                 log.info("File not deleted: " + downloadedFile);
             }
@@ -132,29 +140,43 @@ public class ThumbnailServiceImpl implements ThumbnailService {
 
     private void generateThumbnail(final String thumbnailName, final File downloadedFile, final BlobClient thumbnailBlobClient) throws InterruptedException, IOException {
         log.info("Generating thumbnail: " + thumbnailName);
-        Runtime runtime = Runtime.getRuntime();
-        Process process = null;
-        process = runtime.exec("convert -thumbnail x512 -background white -alpha remove " + downloadedFile.getAbsolutePath() + "[0] " + thumbnailName);
-        int exitValue = process.waitFor();
+        final Runtime runtime = Runtime.getRuntime();
+        final Process process = runtime.exec("convert -thumbnail x512 -background white -alpha remove " + downloadedFile.getAbsolutePath() + "[0] " + thumbnailName);
+        boolean exitValue = process.waitFor(5, TimeUnit.MINUTES);
         log.info("Process exit value for thumbnail generation: " + exitValue);
 
-        log.info("Uploading thumbnail: " + thumbnailName);
-        try (FileInputStream fileInputStrem = new FileInputStream(thumbnailName)) {
-            thumbnailBlobClient.upload(fileInputStrem);
+        if (process.isAlive()) {
+            process.destroyForcibly();
         }
-        boolean deletedThumbnailFile = FileUtils.deleteQuietly(new File(thumbnailName));
-        if (!deletedThumbnailFile) {
-            log.warn("Didn't delete thumbnail locally: " + thumbnailName);
+
+        File thumbnailFile = new File(thumbnailName);
+        if (thumbnailFile.exists()) {
+            log.info("Uploading thumbnail: " + thumbnailName);
+            try (FileInputStream fileInputStrem = new FileInputStream(thumbnailFile)) {
+                thumbnailBlobClient.upload(fileInputStrem);
+            }
+            // TODO: The delete must be uncommented for production, this is just for testing
+            boolean deletedThumbnailFile = false; // FileUtils.deleteQuietly(new File(thumbnailName));
+            if (!deletedThumbnailFile) {
+                log.warn("Didn't delete thumbnail locally: " + thumbnailName);
+            }
+        } else {
+            log.warn("Thumbnail file does not exist: {}", thumbnailFile);
         }
     }
 
     protected BlobContainerClient getBlobContainerClient() {
-        StorageSharedKeyCredential storageSharedKeyCredential = StorageSharedKeyCredential.fromConnectionString(connectionString);
-        BlobServiceClient blobServiceClient = new BlobServiceClientBuilder()
-                .endpoint(containerUrl)
-                .credential(storageSharedKeyCredential)
-                .buildClient();
-        return blobServiceClient.getBlobContainerClient(container);
+        if (blobServiceClient == null) {
+            StorageSharedKeyCredential storageSharedKeyCredential = StorageSharedKeyCredential.fromConnectionString(connectionString);
+            blobServiceClient = new BlobServiceClientBuilder()
+                    .endpoint(containerUrl)
+                    .credential(storageSharedKeyCredential)
+                    .buildClient();
+        }
+        if (blobContainerClient == null) {
+            blobContainerClient = blobServiceClient.getBlobContainerClient(container);
+        }
+        return blobContainerClient;
     }
 
 }
